moved to externo

--- a/bibdatabase.bib
+++ b/bibdatabase.bib
@@ -1,185 +1,252 @@
-@Article{ Renyi1959,
-	title = "On Measures of Dependence",
-	author = "A. Renyi",
-	year = "1959",
+@comment{x-kbibtex-personnameformatting=<%l><, %f>}
+
+@book{Cox1961,
+	author = "Cox, R. T.",
+	publisher = "Johns Hopkins University Press",
+	title = "{The Algebra of Probable Inference}",
+	year = "1961"
+}
+
+@article{Cox1946,
+	author = "Cox, R. T.",
+	journal = "Am. Jour. Phys.",
+	pages = "1--13",
+	title = "{Probability, Frequency, and Reasonable Expectation}",
+	volume = "14",
+	year = "1946"
+}
+
+@article{Shannon1948,
+	author = "Shannon, C. E.",
+	journal = "Bell System Technical Journal",
+	pages = "379--423 and 623--656",
+	title = "{A mathematical theory of communication}",
+	volume = "47",
+	year = "1948"
+}
+
+@article{Renyi1959,
+	author = "Renyi, A.",
 	journal = "Acta. Math. Acad. Sci. Hungar.",
+	pages = "441--451",
+	title = "{On Measures of Dependence}",
 	volume = "10",
-	pages = "441--451"
+	year = "1959"
 }
-@Article{schweizer1981,
-	title = "On nonparametric measures of dependence for random variables",
-	author = "B. Schweizer and E. F. Wolff",
-	year = "1981",
+
+@article{schweizer1981,
+	author = "Schweizer, B. and Wolff, E. F.",
 	journal = "The Annals of Statistics",
-	volume = "9",
 	number = "4",
-	pages = "879 -- 885"
+	pages = "879 -- 885",
+	title = "{On nonparametric measures of dependence for random variables}",
+	volume = "9",
+	year = "1981"
 }
-@Book{ Nelsen1999,
-	title = "An Introduction to Copulas",
-	author = "Roger B. Nelsen",
-	year = "2006",
-	publisher = "Springer",
-	isbn = "0387986235",
+
+@book{Nelsen1999,
 	address = "New York",
-	series = "Springer Series in Statistics",
-	edition = "2nd"
+	author = "Nelsen, Roger B.",
+	edition = "2nd",
+	isbn = "0387986235",
+	publisher = "Springer",
+	series = "{Springer Series in Statistics}",
+	title = "{An Introduction to Copulas}",
+	year = "2006"
 }
-@Article{ Sklar1959,
-	title = "Fonctions de r{\'e}partition {\`a} n dimensions et leurs marges",
-	author = "A. Sklar",
-	year = "1959",
+
+@article{Sklar1959,
+	author = "Sklar, A.",
 	journal = "Publ. Inst. Statist. Univ. Paris",
+	pages = "229--231",
+	title = "{Fonctions de r{\'e}partition {\`a} n dimensions et leurs marges}",
 	volume = "8",
-	pages = "229--231"
+	year = "1959"
 }
-@Article{Ma2008,
-  title = "Mutual Information Is Copula Entropy",
-  journal = "Tsinghua Science and Technology",
-  volume = "16",
-  number = "1",
-  pages = "51 - 54",
-  year = "2011",
-  note = "arXiv:0808.0845",
-  issn = "1007-0214",
-  doi = "10.1016/S1007-0214(11)70008-6",
-  eprint = "arXiv:0808.0845",
-  author = "Jian Ma and Zengqi Sun"
-}
-@Article{Jenison2004,
-	title = "The Shape of Neural Dependence",
-	author = "Rick L. Jenison and Richard A. Reale",
-	year = "2004",
-	journal = "Neural Computation",
-	volume = "16",
-	pages = "665 -- 672"
-}
-@Book{ Jaynes2003,
-	title = "Probability Theory: The Logic of Science",
-	author = "E. T. Jaynes",
-	publisher = "Cambridge University Press",
-	year = "2003",
-	address = "Cambridge"
-}
-@Article{FT2009,
-  title="The Formula that Felled \protect{Wall St.}",
-  author="S. Jones",
-  month="Abril",
-  year="2009",
-  journal="The Financial Times",
-  url="http://www.ft.com/cms/s/2/912d85e8-2d75-11de-9eba-00144feabdc0.html"
-}
-@Article{Kraskov2004,
-	title = "Estimating mutual information",
-	author = "Alexander Kraskov and Harald St{\"{o}}gbauer and Peter Grassberger",
-	journal = "Phys. Rev. E",
-	year = "2004",
-	volume = "69",
-	pages = "066138"
-}
-@Article{Demarta2005,
-	title = "The t Copula and Related Copulas",
-	author= "Stefano Demarta and Alexander J. McNeil",
-	journal= "International Statistical Review",
-	volume = "73",
+
+@article{Ma2008,
+	author = "Ma, Jian and Sun, Zengqi",
+	doi = "10.1016/S1007-0214(11)70008-6",
+	eprint = "arXiv:0808.0845",
+	issn = "1007-0214",
+	journal = "Tsinghua Science and Technology",
+	note = "arXiv:0808.0845",
 	number = "1",
-	pages = "111-129",
+	pages = "51--54",
+	title = "{Mutual Information Is Copula Entropy}",
+	volume = "16",
+	year = "2011"
+}
+
+@article{Jenison2004,
+	author = "Jenison, Rick L. and Reale, Richard A.",
+	journal = "Neural Computation",
+	pages = "665 -- 672",
+	title = "{The Shape of Neural Dependence}",
+	volume = "16",
+	year = "2004"
+}
+
+@book{Jaynes2003,
+	address = "Cambridge",
+	author = "Jaynes, E. T.",
+	publisher = "Cambridge University Press",
+	title = "{Probability Theory: The Logic of Science}",
+	year = "2003"
+}
+
+@article{FT2009,
+	author = "Jones, S.",
+	journal = "The Financial Times",
+	month = "Abril",
+	title = "{The Formula that Felled \protect{Wall St.}}",
+	url = "http://www.ft.com/cms/s/2/912d85e8-2d75-11de-9eba-00144feabdc0.html",
+	year = "2009"
+}
+
+@article{Kraskov2004,
+	author = "Kraskov, Alexander and St{\"o}gbauer, Harald and Grassberger, Peter",
+	journal = "Phys. Rev. E",
+	pages = "066138",
+	title = "{Estimating mutual information}",
+	volume = "69",
+	year = "2004"
+}
+
+@article{Demarta2005,
+	author = "Demarta, Stefano and McNeil, Alexander J.",
+	journal = "International Statistical Review",
+	number = "1",
+	pages = "111--129",
+	title = "{The t Copula and Related Copulas}",
+	volume = "73",
 	year = "2005"
 }
-@Article{Borland2002,
-  title = "Option Pricing Formulas Based on a Non-Gaussian Stock Price Model",
-  author = "Borland, Lisa",
-  journal = "Phys. Rev. Lett.",
-  volume = "89",
-  number = "9",
-  pages = "098701",
-  numpages = "4",
-  year = "2002",
-  month = "Aug",
-  doi = "10.1103/PhysRevLett.89.098701",
-  publisher = "American Physical Society"
+
+@article{Borland2002,
+	author = "Borland, Lisa",
+	doi = "10.1103/PhysRevLett.89.098701",
+	journal = "Phys. Rev. Lett.",
+	month = "Aug",
+	number = "9",
+	numpages = "4",
+	pages = "098701",
+	publisher = "American Physical Society",
+	title = "{Option Pricing Formulas Based on a Non-Gaussian Stock Price Model}",
+	volume = "89",
+	year = "2002"
 }
-@Article{Aiello1993,
-author = {Aiello, LC and Dunbar, RIM},
-journal = {Current Anthropology},
-number = {2},
-pages = {184--193},
-title = {{Neocortex size, group size, and the evolution of language}},
-volume = {34},
-year = {1993}
+
+@article{Aiello1993,
+	author = "Aiello, LC and Dunbar, RIM",
+	journal = "Current Anthropology",
+	number = "2",
+	pages = "184--193",
+	title = "{Neocortex size, group size, and the evolution of language}",
+	volume = "34",
+	year = "1993"
 }
-@Article{Dunbar2009,
-author = {Dunbar, R I M},
-year = {2009},
-doi = {10.1080/03014460902960289},
-journal = {Annals of human biology},
-number = {5},
-pages = {562--72},
-title = {{The social brain hypothesis and its implications for social evolution.}},
-volume = {36}
+
+@article{Dunbar2009,
+	author = "Dunbar, R I M",
+	doi = "10.1080/03014460902960289",
+	journal = "Annals of human biology",
+	number = "5",
+	pages = "562--72",
+	title = "{The social brain hypothesis and its implications for social evolution.}",
+	volume = "36",
+	year = "2009"
 }
-@Article{Joffe1997,
-author = {Joffe, T H and Dunbar, R I},
-doi = {10.1098/rspb.1997.0180},
-journal = {Proceedings. Biological sciences / The Royal Society},
-month = {sep},
-number = {1386},
-pages = {1303--7},
-title = {{Visual and socio-cognitive information processing in primate brain evolution.}},
-volume = {264},
-year = {1997}
+
+@article{Joffe1997,
+	author = "Joffe, T H and Dunbar, R I",
+	doi = "10.1098/rspb.1997.0180",
+	journal = "Proceedings. Biological sciences / The Royal Society",
+	month = "sep",
+	number = "1386",
+	pages = "1303--7",
+	title = "{Visual and socio-cognitive information processing in primate brain evolution.}",
+	volume = "264",
+	year = "1997"
 }
-@Book{deWaal1990,
-  address = {Cambridge, Massachusetts},
-  author = {de Waal, Frans},
-  isbn = {0674659201},
-  publisher = {Harvard University Press},
-  title = {{Peacemaking among primates}},
-  year = {1990}
+
+@book{deWaal1990,
+	address = "Cambridge, Massachusetts",
+	author = "de Waal, Frans",
+	isbn = "0674659201",
+	publisher = "Harvard University Press",
+	title = "{Peacemaking among primates}",
+	year = "1990"
 }
-@Book{deWaal2007,
-	title = "Chimpanzee Politics: Power and Sex Among Apes",
-	author = "Frans de Waal",
-	year = "2007",
-	publisher = "Johns Hopkins University Press",
+
+@book{deWaal2007,
 	address = "Baltimore",
-	edition = "4nd"
+	author = "de Waal, Frans",
+	edition = "4nd",
+	publisher = "Johns Hopkins University Press",
+	title = "{Chimpanzee Politics: Power and Sex Among Apes}",
+	year = "2007"
 }
+
 @article{Currie2010,
-author = {Currie, Thomas E. and Greenhill, Simon J. and Gray, Russell D. and Hasegawa, Toshikazu and Mace, Ruth},
-doi = {10.1038/nature09461},
-journal = {Nature},
-month = {oct},
-number = {7317},
-pages = {801--4},
-pmid = {20944739},
-title = {{Rise and fall of political complexity in island South-East Asia and the Pacific.}},
-volume = {467},
-year = {2010}
+	author = "Currie, Thomas E. and Greenhill, Simon J. and Gray, Russell D. and Hasegawa, Toshikazu and Mace, Ruth",
+	doi = "10.1038/nature09461",
+	journal = "Nature",
+	month = "oct",
+	number = "7317",
+	pages = "801--4",
+	pmid = "20944739",
+	title = "{Rise and fall of political complexity in island South-East Asia and the Pacific.}",
+	volume = "467",
+	year = "2010"
 }
+
 @article{Dunbar2010,
-author = {Dunbar, R. I. M.},
-journal = {Behavioral and Brain Sciences},
-month = {feb},
-number = {04},
-pages = {681},
-title = {{Coevolution of neocortical size, group size and language in humans}},
-volume = {16},
-year = {2010}
+	author = "Dunbar, R. I. M.",
+	journal = "Behavioral and Brain Sciences",
+	month = "feb",
+	number = "04",
+	pages = "681",
+	title = "{Coevolution of neocortical size, group size and language in humans}",
+	volume = "16",
+	year = "2010"
 }
+
 @article{Dunbar2008,
-author = {Dunbar, R. I. M.},
-journal = {Group Dynamics: Theory, Research, and Practice},
-number = {1},
-pages = {7--16},
-title = {{Cognitive constraints on the structure and dynamics of social networks.}},
-volume = {12},
-year = {2008}
+	author = "Dunbar, R. I. M.",
+	journal = "Group Dynamics: Theory, Research, and Practice",
+	number = "1",
+	pages = "7--16",
+	title = "{Cognitive constraints on the structure and dynamics of social networks.}",
+	volume = "12",
+	year = "2008"
 }
+
 @book{Dunbar2010book,
-    author = {Dunbar, Robin},
-    howpublished = {Hardcover},
-    publisher = {Faber and Faber},
-    title = {{How Many Friends Does One Person Need?: Dunbar's Number and Other Evolutionary Quirks}},
-    year = {2010}
+	author = "Dunbar, Robin",
+	howpublished = "Hardcover",
+	publisher = "Faber and Faber",
+	title = "{How Many Friends Does One Person Need?: Dunbar's Number and Other Evolutionary Quirks}",
+	year = "2010"
 }
+
+@article{Calsaverini2009,
+	author = "Calsaverini, R. S. and Vicente, R.",
+	journal = "EPL (Europhysics Letters)",
+	number = "6",
+	pages = "68003",
+	title = "{An information-theoretic approach to statistical dependence: Copula information}",
+	url = "http://stacks.iop.org/0295-5075/88/i=6/a=68003",
+	volume = "88",
+	year = "2009"
+}
+
+@article{ACaticha2008,
+	author = "Caticha, Ariel",
+	howpublished = "arxiv:0808.0012",
+	journal = "arXiv:0808.0012",
+	note = "Invited lecture at the 28th International Workshop on Bayesian Inference and Maximum Entropy Methods in Science and Engineering (July 8-13, 2008, Boraceia Beach, Sao Paulo, Brazil)",
+	title = "{Lectures on Probability, Entropy, and Statistical Physics}"
+	url = "\url{http://arxiv.org/abs/0808.0012}"
+}
+
