--- a/confs/packs.tex
+++ b/confs/packs.tex
@@ -1,4 +1,4 @@
-\usepackage[utf8]{inputenc}
+\usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{ucs}
 \usepackage[brazil]{babel}
@@ -22,7 +22,7 @@
 \usepackage[labelsep=endash]{caption} 
 % \usepackage{subcaption} 
 % \usepackage{graphicx}
-\usepackage{subfig} 
+\usepackage{subfig}
 
 \usepackage{amssymb,amsmath, amsfonts, amsthm} 
 \usepackage[final]{pdfpages}
