--- a/tex/introducao.tex
+++ b/tex/introducao.tex
@@ -1,8 +1,12 @@
 \chapter{Introdução}
 
 \section{Visão geral}
+Este trabalho trata de dois tópicos -- uma abordagem da teoria de dependência estatística e um modelo para a origem de estruturas sociais hierárquicas -- sob o ponto de vista da mecânica estatística, da teoria de informação e da inferência estatística. A adoção desse ponto de vista norteia as estratégias de modelagem matemática aqui selecionadas, e de uma certa forma, são mais essenciais ao trabalho do que os específicos tópicos em si. Dessa forma se faz necessário esclarecer o ponto de vista adotado de forma detalhada antes que os tópicos específicos sejam apresentados.
 
 \section{Inferência}
+
+Adquirir informação e tomar decisões sob incerteza -- dois pontos centrais em qualquer estudo quantitativo -- são os temas centrais da teoria da inferência estatística. A tradição do uso da teoria de probabilidades como ferramenta de inferência é centenária e remonta aos primeiros trabalhos sobre o conceito de probabilidades no século XVII\sourcesneeded. A relação entre o conceito de probabilidade e os problemas de inferência ficaram ainda mais fortes com os trabalhos de Richard Cox\cite{Cox1946,Cox1961} e Claude Shannon\cite{Shannon1948} e suas versões mais modernas\cite{ACaticha2008, ACaticha2009}, lançam novas visões sobre o conceito de entropia e a física estatística. Nessa introdução pretendemos apresentar rapidamente o paradigma de inferência segundo o método de Máxima Entropia (ME) e suas relações com a mecânica estatística, que pensamos ser a linha unificadora que dá coerência à diversidade de temas abordados nesse trabalho. 
+
 \subsection{Probabilidades e Inferência}
 \subsection{Informação e Máxima Entropia}
 
