--- a/tex/pretext/details.tex
+++ b/tex/pretext/details.tex
@@ -1,8 +1,8 @@
-\newcommand{\titletext}{\protect{Tópicos} em Mecanica Estatistica de Sistemas Complexos} 
-\newcommand{\subtitletext}{}
+\newcommand{\titletext}{\protect{Tópicos} em Mecânica Estatística de Sistemas Complexos} 
+\newcommand{\subtitletext}{Uma abordagem mecânico-estatística de dois tópicos de interesse em finanças, economia e sociologia.}
 \newcommand{\authorinfo}{Rafael S. Calsaverini} 
 
 \title{\titletext}
 \author{\authorinfo}
 \date{\today}
-%\publisher{Instituto de Física - Universidade de São Paulo}
+\publisher{Instituto de Física - Universidade de São Paulo}
