--- a/tex/pretext/folhaderosto.tex
+++ b/tex/pretext/folhaderosto.tex
@@ -8,13 +8,13 @@
 
 % Title
 \HRule \\[0.4cm]
-\textsc{\textit{\titlefont {\titletext}\\[.3cm] \subtitlefont {\subtitletext}}}
+\textsc{\textit{\titlefont {\titletext}\\[1.0cm] \subtitlefont {\subtitletext}}}
 \HRule\\[2.2cm]
-\textsc{\LARGE \authorinfo }\\[2.5cm]
+\textsc{\LARGE \authorinfo }\\[1.5cm]
 \hfill\begin{minipage}{0.7\textwidth}
 \Large
 Tese apresentada ao Instituto de Física da Universidade de São Paulo para obtenção do título de Doutor em Ciências. 
-\end{minipage}\\[1.5cm]
+\end{minipage}\\[1.cm]
 % Author and supervisor
 \hfill\begin{minipage}{0.7\textwidth}
 \Large
