--- a/tex/pretext/paginatitulo.tex
+++ b/tex/pretext/paginatitulo.tex
@@ -8,7 +8,7 @@
 
 % Title
 \HRule \\[0.4cm]
-\textsc{\textit{\titlefont {\titletext}\\[.3cm] \subtitlefont {\subtitletext}}}
+\textsc{\textit{\titlefont {\titletext}\\[1.0cm] \subtitlefont {\subtitletext}}}
 \HRule\\[2.2cm]
 \textsc{\LARGE \authorinfo }
 \vfill
